add undelegate and register module
