# x/reporter/types/token_origin.pb.go
@@ -1,5 +1,5 @@
 // Code generated by protoc-gen-gogo. DO NOT EDIT.
-// source: layer/reporter/token_origins.proto
+// source: layer/reporter/token_origin.proto
 
 package types
 
@@ -22,26 +22,26 @@ var _ = math.Inf
 // proto package needs to be updated.
 const _ = proto.GoGoProtoPackageIsVersion3 // please upgrade the proto package
 
-// TokenOrigins is a message to store the origin of a token
-type TokenOrigins struct {
+// TokenOrigin is a message to store the origin of a token
+type TokenOrigin struct {
 	// validator_address is the address of the validator that tokens in staking are delegated to
 	ValidatorAddress string `protobuf:"bytes,1,opt,name=validator_address,json=validatorAddress,proto3" json:"validator_address,omitempty"`
 	// amount is the amount of tokens to be delegated to a reporter from a delegation in staking
 	Amount uint64 `protobuf:"varint,2,opt,name=amount,proto3" json:"amount,omitempty"`
 }
 
-func (m *TokenOrigins) Reset()         { *m = TokenOrigins{} }
-func (m *TokenOrigins) String() string { return proto.CompactTextString(m) }
-func (*TokenOrigins) ProtoMessage()    {}
-func (*TokenOrigins) Descriptor() ([]byte, []int) {
-	return fileDescriptor_6215263d7d61c74f, []int{0}
+func (m *TokenOrigin) Reset()         { *m = TokenOrigin{} }
+func (m *TokenOrigin) String() string { return proto.CompactTextString(m) }
+func (*TokenOrigin) ProtoMessage()    {}
+func (*TokenOrigin) Descriptor() ([]byte, []int) {
+	return fileDescriptor_bf34edebb26f68f4, []int{0}
 }
-func (m *TokenOrigins) XXX_Unmarshal(b []byte) error {
+func (m *TokenOrigin) XXX_Unmarshal(b []byte) error {
 	return m.Unmarshal(b)
 }
-func (m *TokenOrigins) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+func (m *TokenOrigin) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
 	if deterministic {
-		return xxx_messageInfo_TokenOrigins.Marshal(b, m, deterministic)
+		return xxx_messageInfo_TokenOrigin.Marshal(b, m, deterministic)
 	} else {
 		b = b[:cap(b)]
 		n, err := m.MarshalToSizedBuffer(b)
@@ -51,26 +51,26 @@ func (m *TokenOrigins) XXX_Marshal(b []byte, deterministic bool) ([]byte, error)
 		return b[:n], nil
 	}
 }
-func (m *TokenOrigins) XXX_Merge(src proto.Message) {
-	xxx_messageInfo_TokenOrigins.Merge(m, src)
+func (m *TokenOrigin) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_TokenOrigin.Merge(m, src)
 }
-func (m *TokenOrigins) XXX_Size() int {
+func (m *TokenOrigin) XXX_Size() int {
 	return m.Size()
 }
-func (m *TokenOrigins) XXX_DiscardUnknown() {
-	xxx_messageInfo_TokenOrigins.DiscardUnknown(m)
+func (m *TokenOrigin) XXX_DiscardUnknown() {
+	xxx_messageInfo_TokenOrigin.DiscardUnknown(m)
 }
 
-var xxx_messageInfo_TokenOrigins proto.InternalMessageInfo
+var xxx_messageInfo_TokenOrigin proto.InternalMessageInfo
 
-func (m *TokenOrigins) GetValidatorAddress() string {
+func (m *TokenOrigin) GetValidatorAddress() string {
 	if m != nil {
 		return m.ValidatorAddress
 	}
 	return ""
 }
 
-func (m *TokenOrigins) GetAmount() uint64 {
+func (m *TokenOrigin) GetAmount() uint64 {
 	if m != nil {
 		return m.Amount
 	}
@@ -78,31 +78,29 @@ func (m *TokenOrigins) GetAmount() uint64 {
 }
 
 func init() {
-	proto.RegisterType((*TokenOrigins)(nil), "layer.reporter.TokenOrigins")
+	proto.RegisterType((*TokenOrigin)(nil), "layer.reporter.TokenOrigin")
 }
 
-func init() {
-	proto.RegisterFile("layer/reporter/token_origins.proto", fileDescriptor_6215263d7d61c74f)
-}
+func init() { proto.RegisterFile("layer/reporter/token_origin.proto", fileDescriptor_bf34edebb26f68f4) }
 
-var fileDescriptor_6215263d7d61c74f = []byte{
-	// 195 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xe2, 0x52, 0xca, 0x49, 0xac, 0x4c,
+var fileDescriptor_bf34edebb26f68f4 = []byte{
+	// 194 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xe2, 0x52, 0xcc, 0x49, 0xac, 0x4c,
 	0x2d, 0xd2, 0x2f, 0x4a, 0x2d, 0xc8, 0x2f, 0x2a, 0x49, 0x2d, 0xd2, 0x2f, 0xc9, 0xcf, 0x4e, 0xcd,
-	0x8b, 0xcf, 0x2f, 0xca, 0x4c, 0xcf, 0xcc, 0x2b, 0xd6, 0x2b, 0x28, 0xca, 0x2f, 0xc9, 0x17, 0xe2,
-	0x03, 0xab, 0xd1, 0x83, 0xa9, 0x51, 0x0a, 0xe6, 0xe2, 0x09, 0x01, 0x29, 0xf3, 0x87, 0xa8, 0x12,
-	0xd2, 0xe6, 0x12, 0x2c, 0x4b, 0xcc, 0xc9, 0x4c, 0x49, 0x2c, 0xc9, 0x2f, 0x8a, 0x4f, 0x4c, 0x49,
-	0x29, 0x4a, 0x2d, 0x2e, 0x96, 0x60, 0x54, 0x60, 0xd4, 0xe0, 0x0c, 0x12, 0x80, 0x4b, 0x38, 0x42,
-	0xc4, 0x85, 0xc4, 0xb8, 0xd8, 0x12, 0x73, 0xf3, 0x4b, 0xf3, 0x4a, 0x24, 0x98, 0x14, 0x18, 0x35,
-	0x58, 0x82, 0xa0, 0x3c, 0x27, 0xd7, 0x13, 0x8f, 0xe4, 0x18, 0x2f, 0x3c, 0x92, 0x63, 0x7c, 0xf0,
-	0x48, 0x8e, 0x71, 0xc2, 0x63, 0x39, 0x86, 0x0b, 0x8f, 0xe5, 0x18, 0x6e, 0x3c, 0x96, 0x63, 0x88,
-	0xd2, 0x4e, 0xcf, 0x2c, 0xc9, 0x28, 0x4d, 0xd2, 0x4b, 0xce, 0xcf, 0xd5, 0x2f, 0x49, 0xcd, 0xc9,
-	0xc9, 0x2f, 0xd2, 0xcd, 0xcc, 0xd7, 0x87, 0xb8, 0xbb, 0x02, 0xc9, 0xe5, 0x95, 0x05, 0xa9, 0xc5,
-	0x49, 0x6c, 0x60, 0x27, 0x1b, 0x03, 0x02, 0x00, 0x00, 0xff, 0xff, 0x17, 0x37, 0xbb, 0xa6, 0xd8,
-	0x00, 0x00, 0x00,
+	0x8b, 0xcf, 0x2f, 0xca, 0x4c, 0xcf, 0xcc, 0xd3, 0x2b, 0x28, 0xca, 0x2f, 0xc9, 0x17, 0xe2, 0x03,
+	0x2b, 0xd1, 0x83, 0x29, 0x51, 0x0a, 0xe2, 0xe2, 0x0e, 0x01, 0xa9, 0xf2, 0x07, 0x2b, 0x12, 0xd2,
+	0xe6, 0x12, 0x2c, 0x4b, 0xcc, 0xc9, 0x4c, 0x49, 0x2c, 0xc9, 0x2f, 0x8a, 0x4f, 0x4c, 0x49, 0x29,
+	0x4a, 0x2d, 0x2e, 0x96, 0x60, 0x54, 0x60, 0xd4, 0xe0, 0x0c, 0x12, 0x80, 0x4b, 0x38, 0x42, 0xc4,
+	0x85, 0xc4, 0xb8, 0xd8, 0x12, 0x73, 0xf3, 0x4b, 0xf3, 0x4a, 0x24, 0x98, 0x14, 0x18, 0x35, 0x58,
+	0x82, 0xa0, 0x3c, 0x27, 0xd7, 0x13, 0x8f, 0xe4, 0x18, 0x2f, 0x3c, 0x92, 0x63, 0x7c, 0xf0, 0x48,
+	0x8e, 0x71, 0xc2, 0x63, 0x39, 0x86, 0x0b, 0x8f, 0xe5, 0x18, 0x6e, 0x3c, 0x96, 0x63, 0x88, 0xd2,
+	0x4e, 0xcf, 0x2c, 0xc9, 0x28, 0x4d, 0xd2, 0x4b, 0xce, 0xcf, 0xd5, 0x2f, 0x49, 0xcd, 0xc9, 0xc9,
+	0x2f, 0xd2, 0xcd, 0xcc, 0xd7, 0x87, 0xb8, 0xba, 0x02, 0xc9, 0xdd, 0x95, 0x05, 0xa9, 0xc5, 0x49,
+	0x6c, 0x60, 0x17, 0x1b, 0x03, 0x02, 0x00, 0x00, 0xff, 0xff, 0x7f, 0xf7, 0xae, 0xe2, 0xd6, 0x00,
+	0x00, 0x00,
 }
 
-func (m *TokenOrigins) Marshal() (dAtA []byte, err error) {
+func (m *TokenOrigin) Marshal() (dAtA []byte, err error) {
 	size := m.Size()
 	dAtA = make([]byte, size)
 	n, err := m.MarshalToSizedBuffer(dAtA[:size])
@@ -112,33 +110,33 @@ func (m *TokenOrigins) Marshal() (dAtA []byte, err error) {
 	return dAtA[:n], nil
 }
 
-func (m *TokenOrigins) MarshalTo(dAtA []byte) (int, error) {
+func (m *TokenOrigin) MarshalTo(dAtA []byte) (int, error) {
 	size := m.Size()
 	return m.MarshalToSizedBuffer(dAtA[:size])
 }
 
-func (m *TokenOrigins) MarshalToSizedBuffer(dAtA []byte) (int, error) {
+func (m *TokenOrigin) MarshalToSizedBuffer(dAtA []byte) (int, error) {
 	i := len(dAtA)
 	_ = i
 	var l int
 	_ = l
 	if m.Amount != 0 {
-		i = encodeVarintTokenOrigins(dAtA, i, uint64(m.Amount))
+		i = encodeVarintTokenOrigin(dAtA, i, uint64(m.Amount))
 		i--
 		dAtA[i] = 0x10
 	}
 	if len(m.ValidatorAddress) > 0 {
 		i -= len(m.ValidatorAddress)
 		copy(dAtA[i:], m.ValidatorAddress)
-		i = encodeVarintTokenOrigins(dAtA, i, uint64(len(m.ValidatorAddress)))
+		i = encodeVarintTokenOrigin(dAtA, i, uint64(len(m.ValidatorAddress)))
 		i--
 		dAtA[i] = 0xa
 	}
 	return len(dAtA) - i, nil
 }
 
-func encodeVarintTokenOrigins(dAtA []byte, offset int, v uint64) int {
-	offset -= sovTokenOrigins(v)
+func encodeVarintTokenOrigin(dAtA []byte, offset int, v uint64) int {
+	offset -= sovTokenOrigin(v)
 	base := offset
 	for v >= 1<<7 {
 		dAtA[offset] = uint8(v&0x7f | 0x80)
@@ -148,7 +146,7 @@ func encodeVarintTokenOrigins(dAtA []byte, offset int, v uint64) int {
 	dAtA[offset] = uint8(v)
 	return base
 }
-func (m *TokenOrigins) Size() (n int) {
+func (m *TokenOrigin) Size() (n int) {
 	if m == nil {
 		return 0
 	}
@@ -156,21 +154,21 @@ func (m *TokenOrigins) Size() (n int) {
 	_ = l
 	l = len(m.ValidatorAddress)
 	if l > 0 {
-		n += 1 + l + sovTokenOrigins(uint64(l))
+		n += 1 + l + sovTokenOrigin(uint64(l))
 	}
 	if m.Amount != 0 {
-		n += 1 + sovTokenOrigins(uint64(m.Amount))
+		n += 1 + sovTokenOrigin(uint64(m.Amount))
 	}
 	return n
 }
 
-func sovTokenOrigins(x uint64) (n int) {
+func sovTokenOrigin(x uint64) (n int) {
 	return (math_bits.Len64(x|1) + 6) / 7
 }
-func sozTokenOrigins(x uint64) (n int) {
-	return sovTokenOrigins(uint64((x << 1) ^ uint64((int64(x) >> 63))))
+func sozTokenOrigin(x uint64) (n int) {
+	return sovTokenOrigin(uint64((x << 1) ^ uint64((int64(x) >> 63))))
 }
-func (m *TokenOrigins) Unmarshal(dAtA []byte) error {
+func (m *TokenOrigin) Unmarshal(dAtA []byte) error {
 	l := len(dAtA)
 	iNdEx := 0
 	for iNdEx < l {
@@ -178,7 +176,7 @@ func (m *TokenOrigins) Unmarshal(dAtA []byte) error {
 		var wire uint64
 		for shift := uint(0); ; shift += 7 {
 			if shift >= 64 {
-				return ErrIntOverflowTokenOrigins
+				return ErrIntOverflowTokenOrigin
 			}
 			if iNdEx >= l {
 				return io.ErrUnexpectedEOF
@@ -193,10 +191,10 @@ func (m *TokenOrigins) Unmarshal(dAtA []byte) error {
 		fieldNum := int32(wire >> 3)
 		wireType := int(wire & 0x7)
 		if wireType == 4 {
-			return fmt.Errorf("proto: TokenOrigins: wiretype end group for non-group")
+			return fmt.Errorf("proto: TokenOrigin: wiretype end group for non-group")
 		}
 		if fieldNum <= 0 {
-			return fmt.Errorf("proto: TokenOrigins: illegal tag %d (wire type %d)", fieldNum, wire)
+			return fmt.Errorf("proto: TokenOrigin: illegal tag %d (wire type %d)", fieldNum, wire)
 		}
 		switch fieldNum {
 		case 1:
@@ -206,7 +204,7 @@ func (m *TokenOrigins) Unmarshal(dAtA []byte) error {
 			var stringLen uint64
 			for shift := uint(0); ; shift += 7 {
 				if shift >= 64 {
-					return ErrIntOverflowTokenOrigins
+					return ErrIntOverflowTokenOrigin
 				}
 				if iNdEx >= l {
 					return io.ErrUnexpectedEOF
@@ -220,11 +218,11 @@ func (m *TokenOrigins) Unmarshal(dAtA []byte) error {
 			}
 			intStringLen := int(stringLen)
 			if intStringLen < 0 {
-				return ErrInvalidLengthTokenOrigins
+				return ErrInvalidLengthTokenOrigin
 			}
 			postIndex := iNdEx + intStringLen
 			if postIndex < 0 {
-				return ErrInvalidLengthTokenOrigins
+				return ErrInvalidLengthTokenOrigin
 			}
 			if postIndex > l {
 				return io.ErrUnexpectedEOF
@@ -238,7 +236,7 @@ func (m *TokenOrigins) Unmarshal(dAtA []byte) error {
 			m.Amount = 0
 			for shift := uint(0); ; shift += 7 {
 				if shift >= 64 {
-					return ErrIntOverflowTokenOrigins
+					return ErrIntOverflowTokenOrigin
 				}
 				if iNdEx >= l {
 					return io.ErrUnexpectedEOF
@@ -252,12 +250,12 @@ func (m *TokenOrigins) Unmarshal(dAtA []byte) error {
 			}
 		default:
 			iNdEx = preIndex
-			skippy, err := skipTokenOrigins(dAtA[iNdEx:])
+			skippy, err := skipTokenOrigin(dAtA[iNdEx:])
 			if err != nil {
 				return err
 			}
 			if (skippy < 0) || (iNdEx+skippy) < 0 {
-				return ErrInvalidLengthTokenOrigins
+				return ErrInvalidLengthTokenOrigin
 			}
 			if (iNdEx + skippy) > l {
 				return io.ErrUnexpectedEOF
@@ -271,7 +269,7 @@ func (m *TokenOrigins) Unmarshal(dAtA []byte) error {
 	}
 	return nil
 }
-func skipTokenOrigins(dAtA []byte) (n int, err error) {
+func skipTokenOrigin(dAtA []byte) (n int, err error) {
 	l := len(dAtA)
 	iNdEx := 0
 	depth := 0
@@ -279,7 +277,7 @@ func skipTokenOrigins(dAtA []byte) (n int, err error) {
 		var wire uint64
 		for shift := uint(0); ; shift += 7 {
 			if shift >= 64 {
-				return 0, ErrIntOverflowTokenOrigins
+				return 0, ErrIntOverflowTokenOrigin
 			}
 			if iNdEx >= l {
 				return 0, io.ErrUnexpectedEOF
@@ -296,7 +294,7 @@ func skipTokenOrigins(dAtA []byte) (n int, err error) {
 		case 0:
 			for shift := uint(0); ; shift += 7 {
 				if shift >= 64 {
-					return 0, ErrIntOverflowTokenOrigins
+					return 0, ErrIntOverflowTokenOrigin
 				}
 				if iNdEx >= l {
 					return 0, io.ErrUnexpectedEOF
@@ -312,7 +310,7 @@ func skipTokenOrigins(dAtA []byte) (n int, err error) {
 			var length int
 			for shift := uint(0); ; shift += 7 {
 				if shift >= 64 {
-					return 0, ErrIntOverflowTokenOrigins
+					return 0, ErrIntOverflowTokenOrigin
 				}
 				if iNdEx >= l {
 					return 0, io.ErrUnexpectedEOF
@@ -325,14 +323,14 @@ func skipTokenOrigins(dAtA []byte) (n int, err error) {
 				}
 			}
 			if length < 0 {
-				return 0, ErrInvalidLengthTokenOrigins
+				return 0, ErrInvalidLengthTokenOrigin
 			}
 			iNdEx += length
 		case 3:
 			depth++
 		case 4:
 			if depth == 0 {
-				return 0, ErrUnexpectedEndOfGroupTokenOrigins
+				return 0, ErrUnexpectedEndOfGroupTokenOrigin
 			}
 			depth--
 		case 5:
@@ -341,7 +339,7 @@ func skipTokenOrigins(dAtA []byte) (n int, err error) {
 			return 0, fmt.Errorf("proto: illegal wireType %d", wireType)
 		}
 		if iNdEx < 0 {
-			return 0, ErrInvalidLengthTokenOrigins
+			return 0, ErrInvalidLengthTokenOrigin
 		}
 		if depth == 0 {
 			return iNdEx, nil
@@ -351,7 +349,7 @@ func skipTokenOrigins(dAtA []byte) (n int, err error) {
 }
 
 var (
-	ErrInvalidLengthTokenOrigins        = fmt.Errorf("proto: negative length found during unmarshaling")
-	ErrIntOverflowTokenOrigins          = fmt.Errorf("proto: integer overflow")
-	ErrUnexpectedEndOfGroupTokenOrigins = fmt.Errorf("proto: unexpected end of group")
+	ErrInvalidLengthTokenOrigin        = fmt.Errorf("proto: negative length found during unmarshaling")
+	ErrIntOverflowTokenOrigin          = fmt.Errorf("proto: integer overflow")
+	ErrUnexpectedEndOfGroupTokenOrigin = fmt.Errorf("proto: unexpected end of group")
 )
